# wechatbysimple

./: README.md
IMApiServer/: BaseData.h  CJsonObjectBase.cpp  CJsonObjectBase.h  CMakeLists.txt  IMApiServer.cbp  IMServer.cpp  README.md
IMServer/: CMakeLists.txt  README.md  STNetMsgXpHeader.h  codec.cbp  codec.cc  codec.h  dispatcher.h  query.pb.cc  query.pb.h  query.proto  server.cc
WechatBySimple/: README.md  build.gradle  settings.gradle
WechatBySimple/app/: build.gradle
WechatBySimple/app/src/androidTest/java/com/simple/wechatsimple/: ExampleInstrumentedTest.kt
WechatBySimple/app/src/main/: AndroidManifest.xml
WechatBySimple/app/src/main/java/com/simple/wechatsimple/: MyApp.kt
WechatBySimple/app/src/main/res/drawable/: checkbox_style.xml  selector_common_item.xml  shape_solid_51aa37_radius_5.xml  shape_solid_e5e5e5.xml  shape_stroke_9ec697_solid_b0dca8_radius_5.xml
WechatBySimple/app/src/main/res/layout/: act_main.xml  act_session.xml  act_splash.xml  frag_contacts.xml  frag_discovery.xml  frag_login.xml  frag_mine.xml  frag_session.xml  fragment_recent_message.xml  include_func_layout.xml  include_toolbar.xml  item_audio_receive.xml  item_audio_send.xml  item_contact.xml  item_contact_header.xml  item_image_receive.xml  item_image_send.xml  item_recent_message.xml  item_sticker_receive.xml  item_sticker_send.xml  item_text_receive.xml  item_text_send.xml  view_alertdialog.xml
WechatBySimple/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
WechatBySimple/app/src/test/java/com/simple/wechatsimple/: ExampleUnitTest.kt
WechatBySimple/gradle/wrapper/: gradle-wrapper.properties
WechatBySimple/imlib/: build.gradle
WechatBySimple/imlib/src/main/: AndroidManifest.xml
WechatBySimple/imlib/src/main/java/com/simple/imlib/: IMClient.kt  PushService.java
WechatBySimple/imlib/src/test/java/com/simple/imlib/: ExampleUnitTest.java
WechatBySimple/uploadservice/: build.gradle
WechatBySimple/uploadservice/src/androidTest/java/net/gotev/uploadservice/: ExampleInstrumentedTest.java
WechatBySimple/uploadservice/src/main/: AndroidManifest.xml
WechatBySimple/uploadservice/src/main/aidl/com/simple/upload/: FTPUploadTaskParameters.aidl  IUploadInterface.aidl  ServerResponse.aidl  UploadInfo.aidl  UploadStatusDelegate.aidl
WechatBySimple/uploadservice/src/main/java/com/simple/upload/: BroadcastData.java  ContentType.java  DefaultLoggerDelegate.java  FTPUploadTaskParameters.java  Logger.java  (+8 more)
WechatBySimple/uploadservice/src/main/res/values/: strings.xml
WechatBySimple/wrapper/: CMakeLists.txt  build.gradle
WechatBySimple/wrapper/src/main/: AndroidManifest.xml
WechatBySimple/wrapper/src/main/aidl/com/tencent/mars/wrapper/remote/: MarsPushMessageFilter.aidl  MarsReportConnectInfo.aidl  MarsService.aidl  MarsTaskWrapper.aidl
WechatBySimple/wrapper/src/main/cpp/: native-lib.cpp  parse.h
WechatBySimple/wrapper/src/main/cpp/muduo/: Buffer.cc  Buffer.h  Endian.h  SocketsOps.cc  SocketsOps.h  StringPiece.h  Types.h  copyable.h
WechatBySimple/wrapper/src/main/java/com/tencent/mars/utils/print/: BaseConstants.java  BundleFormat.java  MemoryDump.java
WechatBySimple/wrapper/src/main/java/com/tencent/mars/wrapper/: TaskProperty.java
WechatBySimple/wrapper/src/main/java/com/tencent/mars/wrapper/remote/: AbstractTaskWrapper.java  ConnectInfoHandler.java  MarsServiceProxy.java  MarsTaskProperty.java  NanoMarsTaskWrapper.java  PackageUtils.java  PushMessage.java  PushMessageHandler.java
WechatBySimple/wrapper/src/main/java/com/tencent/mars/wrapper/service/: DebugMarsServiceProfile.java  MarsServiceNative.java  MarsServiceProfile.java  MarsServiceProfileFactory.java  MarsServiceStub.java
WechatBySimple/wrapper/src/main/java/com/tencent/mars/wrapper/task/: LoginTaskWrapper.java
WechatBySimple/wrapper/src/main/proto/: query.proto
(+97 files in other folders)
